<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/profile"
            android:background="@drawable/user_profile" />

        <TextView android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:gravity="center"
            />

    </LinearLayout>


    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#cccccccc"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <TextView android:id="@+id/balanceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/minute"
            android:textSize="14sp"
            android:layout_marginTop="14dp" />

        <TextView android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/zero"
            android:textSize="14sp"
            android:layout_marginTop="14dp"/>


    </LinearLayout>


    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#cccccccc"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/about" >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/action_about"
            android:textSize="14sp"
            android:layout_marginTop="14dp"
            />

        <ImageButton android:id="@+id/about_more_info"
            android:background="@drawable/right"
            android:contentDescription="@string/more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#cccccccc"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/add_funds"
        android:id="@+id/add_fund_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_button_background"
        android:textColor="#ffffffff"
        android:radius="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/unregister"
        android:id="@+id/forgetMe"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_button_background"
        android:textColor="#ffffffff"
        android:radius="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

</LinearLayout>