<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_margin="0dp"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/incoming_call_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="160dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#ffffffff"/>
    <!--android:layout_centerVertical="true"-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal">-->

    <!--<org.appspot.apprtc.RoundImageButton-->
    <!--android:layout_width="50dip"-->
    <!--android:layout_height="50dip"-->
    <!--android:id="@+id/reject_button"-->
    <!--android:contentDescription="@string/reject"-->
    <!--android:layout_marginBottom="40dp"-->
    <!--android:background="@drawable/red_button_background"-->
    <!--android:textColor="#ffffffff"-->
    <!--android:radius="4dp"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_alignParentEnd="false"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignParentTop="false"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--style="?android:attr/borderlessButtonStyle"/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true">
        <!--android:layout_alignParentLeft="true"-->
        <ImageButton
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:id="@+id/reject_button"
            android:contentDescription="@string/reject"
            android:src="@drawable/ic_reject"
            android:background="@drawable/round_red_button_background"
            android:layout_alignParentTop="true"

            android:layout_alignParentStart="true"

            android:layout_marginStart="32dp" />
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_marginLeft="32dp"-->
        <ImageButton
            android:id="@+id/accept_button"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:background="@drawable/round_green_button_background"
            android:contentDescription="@string/accept"
            android:src="@drawable/ic_accept"
            android:layout_alignParentTop="true"

            android:layout_alignParentEnd="true"

            android:layout_marginEnd="32dp" />
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="32dp"-->
    </RelativeLayout>


</RelativeLayout>